--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "argon-design-system-react",
   "version": "1.1.0",
   "description": "React version of Argon Design System by Creative Tim",
+  "proxy": "http://localhost:5000",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "headroom.js": "0.11.0",
